src/test/deca/context/invalid/langage_essentiel/troisieme_passe/regle_3_39_4.deca
// Description:
//    regle 3.39, condition
//
// Resultats:
//    Ligne 15: Illegal cast.


class C{
    void m(){
    }
}

{
   C c = new C();
   Object b = (C) (c.m());
}